--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>My first three.js app</title>
+        <title>Website</title>
         <style>
             body { margin: 0; }
 
@@ -30,7 +30,6 @@
 
     <body>
         <div id="container"></div>
-        <div id="info">BOGAS, three js now works bro</div>
         <script type="module" src="/main.js"></script>
     </body>
 </html>
